--- a/index.html
+++ b/index.html
@@ -64,51 +64,51 @@
 
             <div class="portfolio__pages">
                 <div class="pages">
-                    <img src="./img/tempo.png" alt="">
+                    <img src="./img/weather.png" alt="">
                     <div class="description">
-                        <h3>Página</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <h3>Previsão do tempo</h3>
+                        <p>Site de previsão do tempo para treinar conexão com api e pegar a localização do navegador</p>
+                        <a href="https://jeidencw.github.io/tempo-para-portfolio/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                  <div class="pages">
-                    <img src="./img/cobrinha.png" alt="">
+                    <img src="./img/snake.png" alt="">
                     <div class="description">
-                        <h3>Página</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <h3>Cobrinha</h3>
+                        <p>Clássico jogo da cobrinha, mas com a possibilidade de jogar com gestos (virando o celular). Infelizmente só  funciona no android (por enquanto)</p>
+                        <a href="https://jeidencw.github.io/cobrinha/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                  <div class="pages">
                     <img src="./img/site.png" alt="">
                     <div class="description">
-                        <h3>Página</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <h3>Site para digulgar</h3>
+                        <p>Modelo de site feito com react para divulgar loja, fácil de mudar todas as cores, acrescentar as fotos</p>
+                        <a href="https://scintillating-caramel-2aa873.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="pages">
-                    <img src="./img/tempo.png" alt="">
+                    <img src="./img/shadow.png" alt="">
                     <div class="description">
-                        <h3>Página</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <h3>Gerador de sombras</h3>
+                        <p>Gera o HTML da sombra escolhida</p>
+                        <a href="https://jeidencw.github.io/shadowGenerator/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                  <div class="pages">
-                    <img src="./img/cobrinha.png" alt="">
+                    <img src="./img/translate.png" alt="">
                     <div class="description">
-                        <h3>Página</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <h3>Tradutor</h3>
+                        <p>Um tradutor simples usado para treinar conexão com api</p>
+                        <a href="https://jeidencw.github.io/translate/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                  <div class="pages">
-                    <img src="./img/site.png" alt="">
+                    <img src="./img/to-do.png" alt="">
                     <div class="description">
-                        <h3>Página</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <h3>Lista de tarefas</h3>
+                        <p>Uma lista de tarefas que salva tudo no navegador com modo escuro</p>
+                        <a href="https://jeidencw.github.io/to-do-list-para-portfolio/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
