--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                 <h1 class="about__title">Henrique</h1>
 
                 <p class="about__description">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam dolores mollitia officia nihil minus eligendi, possimus consequatur rem est voluptate maiores unde aut odit modi atque, iure, consectetur veritatis nesciunt?
+                    Sou um desenvolvedor em formação, estudando programação há pouco mais de dois anos, com o objetivo de realizar uma transição de carreira. <br><br>
+                    Escolhi essa área porque é onde mais me identifico. Tenho grande interesse na resolução de problemas e na busca por soluções criativas e eficientes para diferentes desafios.               
                 </p>
 
                 <a href="#contact" class="btn">Contato</a>
@@ -60,7 +61,11 @@
 
         <section class="container" id="education">
             <h2 class="title">Formação</h2>
-            <p class="education__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur impedit optio quaerat expedita quibusdam? Sequi, libero optio possimus provident quae natus incidunt sapiente tenetur! Voluptatibus, nulla? Explicabo voluptatem illo beatae!</p>
+            <p class="education__text">
+                Tenho estudado a mais de 2 anos, não tanto queria, mas estou evoluindo bastante, fiz alguns cursos mas
+                a maior parte do conhecimento veio atravez de projetos completos achados no youtube, GitHub. Fui pegando 
+                esses projetos, modificando, acrescentando novas funcionalidades, sempre pesquisando muito.
+            </p>
 
             <div class="tab__titles">
                 <p class="tab__links active__link" onclick="opentab('skills')">Habilidades</p>
@@ -71,23 +76,24 @@
             <div class="tab__contents__container">
                 <div class="tab__contents active__tab" id="skills">
                     <ul>
-                        <li><span>UI/UX</span><br>Designer Web/App interfaces</li>
-                        <li><span>Web Development</span><br>Web app Development</li>
-                        <li><span>App Development</span><br>Buildings Android/IOS apps</li>
+                        <li><span>React</span> - Intermediário</li>
+                        <li><span>JavaScript</span> - Intermediário</li>
+                        <li><span>Java</span> - Básico</li>
+                        <li><span>C</span> - Básico</li>
                     </ul>
                 </div>
                 <div class="tab__contents" id="educations">
                     <ul>
-                        <li><span>2021 - Current</span><br>UI/UX Design Training at ET Instute</li>
-                        <li><span>2019 - 2021</span><br>Team lead at StartApp LLc</li>
-                        <li><span>2016 - 2017</span><br>Internship at ekart eCommerce</li>
+                        <li><span>2023</span><br>Alura - HTML, CSS e JavaScript</li>
+                        <li><span>2023</span><br>CJRM - JavaScript</li>
+                        <li><span>2024</span><br>Udemy - React</li>
+                        <li><span>2024</span><br>Udemy - Java</li>
                     </ul>
                 </div>
                 <div class="tab__contents" id="language">
                     <ul>
-                        <li><span>2016</span><br>UI/UX Design Training at ET Instutes</li>
-                        <li><span>2016</span><br>MBA from MIT Bangalore</li>
-                        <li><span>2014</span><br>BBA from ISM Bangalore</li>
+                        <li><span>Inglês</span><br>Intermediário</li>
+                        <li><span>2018-2020</span><br>Influx</li>
                     </ul>
                 </div>
             </div>
